--- a/GBriceCorp/src/main/webapp/static/views/Fin_Inscription.html
+++ b/GBriceCorp/src/main/webapp/static/views/Fin_Inscription.html
@@ -1,7 +1,7 @@
 
 
 <div class="panel panel-info"
-	ng-controller="DemandeController as dmdctrl">
+	ng-controller="DemandeController as dmdctrl" ng-init="dmdctrl.findDemandeById(demande_id)">
 
 	<!-- Default panel contents -->
 	<div class="panel-heading">
