--- a/GBriceCorp/src/main/webapp/static/views/ConsClient_DetailCompte.html
+++ b/GBriceCorp/src/main/webapp/static/views/ConsClient_DetailCompte.html
@@ -85,25 +85,25 @@
 			<option value="4">Autre</option>
 		</select>
 
-		<div class="col-xs-12" ng-show="(value==1)?true:false">
+		<div class="col-xs-12" ng-if="(value==1)?true:false">
 			<input type="file" id="file" name="file"
 				class="form-control input-sm"
 				onchange="angular.element(this).scope().uploadFile(this.files, 'Domicile')" />
 		</div>
 		
-		<div class="col-xs-12" ng-show="(value==2)?true:false">
+		<div class="col-xs-12" ng-if="(value==2)?true:false">
 			<input type="file" id="file" name="file"
 				class="form-control input-sm"
 				onchange="angular.element(this).scope().uploadFile(this.files, 'Impot')" />
 		</div>
 
-		<div class="col-xs-12" ng-show="(value==3)?true:false">
+		<div class="col-xs-12" ng-if="(value==3)?true:false">
 			<input type="file" id="file" name="file"
 				class="form-control input-sm"
 				onchange="angular.element(this).scope().uploadFile(this.files, 'Salaire')" />
 		</div>
 
-		<div class="col-xs-12" ng-show="(value==4)?true:false">
+		<div class="col-xs-12" ng-if="(value==4)?true:false">
 			<input type="file" id="file" name="file"
 				class="form-control input-sm"
 				onchange="angular.element(this).scope().uploadFile(this.files, 'Autre')" />
@@ -115,8 +115,8 @@
 
 
 	<div id="RIBSectionId" class=" panel panel-default " ng-controller="CompteController as cptctrl"
-	ng-init="(client_id==null)?(comptes=[]):(cptctrl.findComptesByClientId(client_id))"
-	ng-repeat="compte in comptes">
+	ng-init="(demande_id!=null)?(cptctrl.findComptesByDemandeId(demande_id)):(cptctrl.findComptesByClientId(client_id))"
+	ng-repeat="compte in comptes">{{demande_id}}
 		<div class="panel-heading">
 			<span class="lead">{{compte.libelle}}
 				<button ng-click="ctrl.printToCart('RIBSectionId')"
