implémentation de la suppression du conseiller

--- a/GBriceCorp/src/main/webapp/static/views/Admin_CreaCons.html
+++ b/GBriceCorp/src/main/webapp/static/views/Admin_CreaCons.html
@@ -132,7 +132,7 @@
 							</label>
 						<div class="col-md-7">
 							<input type="text" ng-model="ctrl.cons.motDePasse" name="motDePasse"
-								class="form-control input-sm" placeholder=""
+								class="password form-control input-sm" placeholder=""
 								required />
 							<div class="has-error" ng-show="formInscription.$dirty">
 								<span ng-show="formConnexion.adresse.$error.required">Champ
