--- a/GBriceCorp/src/main/webapp/static/views/ConsClient_DetailCompte.html
+++ b/GBriceCorp/src/main/webapp/static/views/ConsClient_DetailCompte.html
@@ -9,6 +9,7 @@
 		<span class="lead">Espace de {{ctrl.currentUser.prenom}}
 			{{ctrl.currentUser.nom}} </span>
 
+</form>
 	</div>
 	<ul class="list-group">
 		<li class="list-group-item">{{ctrl.currentUser.adresse}}</li>
