--- a/GBriceCorp/src/main/webapp/static/views/Cons_RechCpt.html
+++ b/GBriceCorp/src/main/webapp/static/views/Cons_RechCpt.html
@@ -2,7 +2,8 @@
 
 <!-- Tableau d'affichage des comptes -->
 
-	<div class="panel panel-info" >
+	<div class="panel panel-info" ng-controller="CompteController as cptctrl"
+	ng-init="cptctrl.getAllComptesByCons()" >
 
 		<!-- Default panel contents -->
 		<div class="panel-heading" >
@@ -15,16 +16,15 @@
 					<thead>
 						<tr >
 							<th ng-click="ctrl.trier_par('Iban')">Iban</th>						
-							<th ng-click="ctrl.trier_par('Nom')">Nom</th>
-							<th ng-click="ctrl.trier_par('Prenom')">Prenom</th>
+							<th ng-click="ctrl.trier_par('libelle')">libelle</th>
 							<th ng-click="ctrl.trier_par('Solde')">Solde</th>
 						</tr>
 					</thead>
 					<tbody>
-						<tr ng-repeat="Compte in ctrl.currentUser.clients.comptes  | filter:search:strict | orderBy:tripar " ng-click="ctrl.detailCompte(Compte.id)">
+						<tr ng-repeat="Compte in comptes  | filter:search:strict | orderBy:tripar " ng-click="cptctrl.detailCompte(Compte.id)">
 
-							<td>{{Compte.libelle}}</td>
-								<td>{{Compte.id}} </td>
+							<td>{{Compte.id}}</td>
+								<td>{{Compte.libelle}} </td>
 								<td>{{Compte.solde}}</td>						
 
 						</tr>
