--- a/GBriceCorp/src/main/webapp/static/views/Guest_Inscription.html
+++ b/GBriceCorp/src/main/webapp/static/views/Guest_Inscription.html
@@ -1,4 +1,4 @@
-
+<meta charset="utf-8">
 
 
 <!-- Formulaire d'inscription -->
@@ -16,35 +16,31 @@
 	<!-- action="envoiMailConfirmation.php"-->
 	<div class="panel-body">
 		<div class="formcontainer">
-			<form ng-submit="dmdctrl.inscription_Client()" name="formIscription"
+			<form ng-submit="dmdctrl.inscription_Client()" name="formInscription"
 				class="form-horizontal" method="post" enctype="multipart/form-data">
-				<input type="hidden" ng-model="ctrl.demande_inscription.clientID" />
-				<input type="hidden"
-					ng-model="ctrl.demande_inscription.conseillerId" /> <input
-					type="hidden" ng-model="ctrl.demande_inscription.domicile" /> <input
-					type="hidden" ng-model="ctrl.demande_inscription.salaire" />
-
-
-
 				<div class="row">
 					<div class="form-actions ">
-						<a href="#/" class="btn btn-warning btn-sm floatLeft"> Retour
-						</a> <input type="submit" value="Valider"
-							class="btn btn-primary btn-sm floatRight"
-							ng-disabled="formConnexion.$invalid">
+						<a href="#/" class="btn btn-warning btn-sm floatLeft"> Retour</a> 
+						<input 	type="submit" 
+								value="Valider"
+								class="btn btn-primary btn-sm floatRight"
+								ng-disabled="formInscription.$invalid"/>
 					</div>
 				</div>
 
 				<div class="row">
 					<div class="form-group col-md-12">
-						<label class="col-md-2 control-lable" for="file">Prenom</label>
+						<label class="col-md-2 control-lable" for="prenom">Prenom</label>
 						<div class="col-md-7">
-							<input type="text" ng-model="dmdctrl.demande_inscription.prenom"
-								name="prenom" class="form-control input-sm"
-								placeholder="Entez votre prenom" required />
-							<div class="has-error" ng-show="formInscription.$dirty">
-								<span ng-show="formConnexion.prenom.$error.required">Champ
-									obligatoire</span>
+							<input 	type="text" 
+									ng-model="dmdctrl.demande_inscription.prenom"
+									name="prenom" 
+									class="form-control input-sm"
+									placeholder="Entez votre prenom" 
+									required
+									/>
+							<div 	class="has-error" ng-show="formInscription.prenom.$dirty">
+								<span ng-show="formInscription.prenom.$error.required">Champ obligatoire</span>
 							</div>
 						</div>
 					</div>
@@ -53,12 +49,14 @@
 					<div class="form-group col-md-12">
 						<label class="col-md-2 control-lable" for="file">Nom</label>
 						<div class="col-md-7">
-							<input type="text" ng-model="dmdctrl.demande_inscription.nom"
-								name="nom" class="form-control input-sm"
-								placeholder="Entrez votre prenom" required />
-							<div class="has-error" ng-show="formInscription.$dirty">
-								<span ng-show="formConnexion.nom.$error.required">Champ
-									obligatoire</span>
+							<input 	type="text" 
+									ng-model="dmdctrl.demande_inscription.nom"
+									name="nom" 
+									class="form-control input-sm"
+									placeholder="Entrez votre prenom" 
+									required />
+							<div class="has-error" ng-show="formInscription.nom.$dirty">
+								<span ng-show="formInscription.nom.$error.required">Champ obligatoire</span>
 							</div>
 						</div>
 					</div>
@@ -69,26 +67,32 @@
 						<div class="col-md-7">
 							<input type="tel"
 								ng-model="dmdctrl.demande_inscription.telephone"
-								name="telephone" class="form-control input-sm"
-								placeholder="Entez votre telephone" required />
-							<div class="has-error" ng-show="formInscription.$dirty">
-								<span ng-show="formConnexion.telephone.$error.required">Champ
+								name="telephone" 
+								class="form-control input-sm"
+								placeholder="Entez votre telephone" 
+								required 
+								pattern="^((\d{1,3}(-| )?\(?\d\)?(-| )?\d{1,5})|(\(?\d{2,6}\)?))(-| )?(\d{3,4})(-| )?(\d{4})(( x| ext)\d{1,5}){0,1}$"
+								type="tel"/>
+							<div class="has-error" ng-show="formInscription.telephone.$dirty">
+								<span ng-show="formInscription.telephone.$error.required">Champ
 									obligatoire</span>
+								<span ng-show="formInscription.telephone.$error.pattern">Numéro de téléphone non valide</span>
 							</div>
 						</div>
 					</div>
 				</div>
 				<div class="row">
 					<div class="form-group col-md-12">
-						<label class="col-md-2 control-lable" for="file">Adresse
-							mail</label>
+						<label 	class="col-md-2 control-lable" for="mail">Adresse mail</label>
 						<div class="col-md-7">
-							<input type="email" ng-model="dmdctrl.demande_inscription.mail"
-								name="mail" class="form-control input-sm"
-								placeholder="Entrez votre email" required />
-							<div class="has-error" ng-show="formInscription.$dirty">
-								<span ng-show="formConnexion.email.$error.required">Champ
-									obligatoire</span>
+							<input 	type="email" 
+									ng-model="dmdctrl.demande_inscription.mail"
+									name="mail" 
+									class="form-control input-sm"
+									placeholder="Entrez votre email" 
+									required />
+							<div class="has-error" ng-show="formInscription.email.$dirty">
+								<span ng-show="formInscription.email.$error.required">Champ	obligatoire</span>
 							</div>
 						</div>
 					</div>
@@ -97,39 +101,37 @@
 
 				<div class="row">
 					<div class="form-group col-md-12">
-						<label class="col-md-2 control-lable" for="file">Adresse
-							postale</label>
+						<label class="col-md-2 control-lable" for="adresse">Adresse	postale</label>
 						<div class="col-md-7">
-							<input type="text" ng-model="dmdctrl.demande_inscription.adresse"
-								name="adresse" class="form-control input-sm"
-								placeholder="Entrez votre adresse" required />
-							<div class="has-error" ng-show="formInscription.$dirty">
-								<span ng-show="formConnexion.adresse.$error.required">Champ
-									obligatoire</span>
+							<input 	type="text" 
+									ng-model="dmdctrl.demande_inscription.adresse"
+									name="adresse" 
+									class="form-control input-sm"
+									placeholder="Entrez votre adresse" 
+									required />
+							<div class="has-error" ng-show="formInscription.adresse.$dirty">
+								<span ng-show="formInscription.adresse.$error.required">Champ obligatoire</span>
 							</div>
 						</div>
 					</div>
 				</div>
 				<div class="row">
 					<div class="form-group col-md-12">
-						<label class="col-md-2 control-lable" for="file">Revenus
-							brut mensuel estime</label>
+						<label class="col-md-2 control-lable" for="codepostal">Revenus brut mensuel estimés</label>
 						<div class="col-md-7">
-							<input type="text" ng-model="dmdctrl.demande_inscription.revenu"
-								name="codepostal" class="form-control input-sm"
-								placeholder="Entez votre revenu moyen estime" required />
-							<div class="has-error" ng-show="formInscription.$dirty">
-								<span ng-show="formConnexion.codepostal.$error.required">Champ
+							<input 	type="text" 
+									ng-model="dmdctrl.demande_inscription.revenu"
+									name="codepostal" 
+									class="form-control input-sm"
+									placeholder="Entez votre revenu moyen estimé"
+									required />
+							<div class="has-error" ng-show="formInscription.codepostal.$dirty">
+								<span ng-show="formInscription.codepostal.$error.required">Champ
 									obligatoire</span>
 							</div>
 						</div>
 					</div>
 				</div>
-
-
-
-
-
 			</form>
 		</div>
 	</div>
