--- a/GBriceCorp/src/main/webapp/static/views/Admin_CreaCons.html
+++ b/GBriceCorp/src/main/webapp/static/views/Admin_CreaCons.html
@@ -1,71 +1,81 @@
-
+<meta charset="utf-8">
 <!-- Formulaire de creation de conseiller -->
 
 <div class="panel panel-info ">
 
 	<!-- Default panel contents -->
 	<div class="panel-heading">
-		<span class="lead">Creation d'un nouveau conseiller</span>
+		<span class="lead">Création d'un nouveau conseiller</span>
 	</div>
 
 
 	<div class="panel-body">
 		<div class="formcontainer col-md-12">
-			<form ng-submit="ctrl.creaCons()" name="formIscription"
-				class="form-horizontal">
-				<input type="hidden" ng-model="ctrl.cons.id" /> <input
-					type="hidden" ng-model="ctrl.cons.TypeUser" value="2" />
-
+			<form 	ng-submit="ctrl.creaCons()" 
+					name="formCreaCons"
+					class="form-horizontal">
 				<div class="form-group col-md-12">
-					<label class="col-md-5 control-lable text-right" for="file">Prenom</label>
+					<label class="col-md-5 control-lable text-right" for="prenom">Prenom</label>
 					<div class="col-md-7">
-						<input type="text" ng-model="ctrl.cons.prenom" name="prenom"
-							class="form-control input-sm" placeholder="Entez votre prenom"
-							required />
-						<div class="has-error" ng-show="formInscription.$dirty">
-							<span ng-show="formConnexion.prenom.$error.required">Champ
-								obligatoire</span>
-						</div>
-					</div>
-				</div>
-
-				<div class="form-group col-md-12">
-					<label class="col-md-5 control-lable text-right" for="file">Nom</label>
-					<div class="col-md-7">
-						<input type="text" ng-model="ctrl.cons.nom" name="nom"
-							class="form-control input-sm" placeholder="Entrez votre prenom"
-							required />
-						<div class="has-error" ng-show="formInscription.$dirty">
-							<span ng-show="formConnexion.nom.$error.required">Champ
-								obligatoire</span>
-						</div>
-					</div>
-
-				</div>
-				<div class="row">
-					<div class="form-group col-md-12">
-						<label class="col-md-5 control-lable text-right" for="file">Telephone</label>
-						<div class="col-md-7">
-							<input type="tel" ng-model="ctrl.cons.telephone" name="telephone"
-								class="form-control input-sm"
-								placeholder="Entez votre telephone" required />
-							<div class="has-error" ng-show="formInscription.$dirty">
-								<span ng-show="formConnexion.telephone.$error.required">Champ
-									obligatoire</span>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="form-group col-md-12">
-						<label class="col-md-5 control-lable text-right" for="file">Adresse
-							mail</label>
-						<div class="col-md-7">
-							<input type="email" ng-model="ctrl.cons.mail" name="mail"
-								class="form-control input-sm" placeholder="Entrez votre email"
+						<input 	type="text" 
+								ng-model="ctrl.cons.prenom" 
+								name="prenom"
+								class="form-control input-sm" 
+								placeholder="Entez votre prenom"
 								required />
-							<div class="has-error" ng-show="formInscription.$dirty">
-								<span ng-show="formConnexion.email.$error.required">Champ
+						<div class="has-error" ng-show="formCreaCons.prenom.$dirty">
+							<span ng-show="formCreaCons.prenom.$error.required">Champ
+								obligatoire</span>
+						</div>
+					</div>
+				</div>
+
+				<div class="form-group col-md-12">
+					<label class="col-md-5 control-lable text-right" for="nom">Nom</label>
+					<div class="col-md-7">
+						<input 	type="text" 
+								ng-model="ctrl.cons.nom" 
+								name="nom"
+								class="form-control input-sm" placeholder="Entrez votre prenom"
+								required />
+						<div class="has-error" ng-show="formCreaCons.nom.$dirty">
+							<span ng-show="formCreaCons.nom.$error.required">Champ
+								obligatoire</span>
+						</div>
+					</div>
+
+				</div>
+				<div class="row">
+					<div class="form-group col-md-12">
+						<label class="col-md-5 control-lable text-right" for="telephone">Telephone</label>
+						<div class="col-md-7">
+							<input 	type="tel" 
+									ng-model="ctrl.cons.telephone" 
+									name="telephone"
+									class="form-control input-sm"
+									placeholder="Entez votre telephone" 
+									pattern="^((\d{1,3}(-| )?\(?\d\)?(-| )?\d{1,5})|(\(?\d{2,6}\)?))(-| )?(\d{3,4})(-| )?(\d{4})(( x| ext)\d{1,5}){0,1}$"
+									required />
+							<div class="has-error" ng-show="formCreaCons.telephone.$dirty">
+								<span ng-show="formCreaCons.telephone.$error.required">Champ
+									obligatoire</span>
+								<span ng-show="formCreaCons.telephone.$error.pattern">Numéro de téléphone non valide</span>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="form-group col-md-12">
+						<label class="col-md-5 control-lable text-right" for="mail">Adresse	mail</label>
+						<div class="col-md-7">
+							<input 	type="email" 
+									ng-model="ctrl.cons.mail" 
+									name="mail"
+									class="form-control input-sm" 
+									placeholder="Entrez votre email"
+									required />
+							<div class="has-error" ng-show="formCreaCons.mail.$dirty">
+								<span ng-show="formCreaCons.mail.$error.required">Champ
 									obligatoire</span>
 							</div>
 						</div>
@@ -76,16 +86,17 @@
 
 				<div class="row">
 					<div class="form-group col-md-12">
-						<label class="col-md-5 control-lable text-right" for="file">Confirmez
-							votre mail</label>
+						<label class="col-md-5 control-lable text-right" for="conf_mail">Confirmez votre mail</label>
 						<div class="col-md-7">
 							<input type="email" ng-model="ctrl.cons.conf_mail"
 								name="conf_mail" class="form-control input-sm"
-								placeholder="confirmation" required />
-							<div class="has-error" ng-show="formInscription.$dirty">
-								<span ng-show="formConnexion.conf_mail.$error.required">Champ
+								placeholder="confirmation du mail" required />
+							<div class="has-error" ng-show="formCreaCons.conf_mail.$dirty">
+								<span ng-show="formCreaCons.conf_mail.$error.required">Champ
 									obligatoire</span>
+								
 							</div>
+							<span ng-if="ctrl.cons.conf_mail != ctrl.cons.mail">Mails non identiques</span>
 						</div>
 					</div>
 				</div>
@@ -95,14 +106,17 @@
 				<div class="row">
 
 					<div class="form-group col-md-12">
-						<label class="col-md-5 control-lable text-right" for="file">Adresse
+						<label class="col-md-5 control-lable text-right" for="adresse">Adresse
 							postale</label>
 						<div class="col-md-7">
-							<input type="text" ng-model="ctrl.cons.adresse" name="adresse"
-								class="form-control input-sm" placeholder="Entrez votre adresse"
-								required />
-							<div class="has-error" ng-show="formInscription.$dirty">
-								<span ng-show="formConnexion.adresse.$error.required">Champ
+							<input 	type="text" 
+									ng-model="ctrl.cons.adresse" 
+									name="adresse"
+									class="form-control input-sm" 
+									placeholder="Entrez votre adresse"
+									required />
+							<div class="has-error" ng-show="formCreaCons.adresse.$dirty">
+								<span ng-show="formCreaCons.adresse.$error.required">Champ
 									obligatoire</span>
 							</div>
 						</div>
@@ -115,12 +129,14 @@
 						<label class="col-md-5 control-lable text-right" for="file">Identifiant
 							</label>
 						<div class="col-md-7">
-							<input type="text" ng-model="ctrl.cons.identifiant" name="identifiant"
-								class="form-control input-sm" placeholder=""
-								required />
-							<div class="has-error" ng-show="formInscription.$dirty">
-								<span ng-show="formConnexion.adresse.$error.required">Champ
-									obligatoire</span>
+							<input 	type="text" 
+									ng-model="ctrl.cons.identifiant" 
+									name="identifiant"
+									class="form-control input-sm" 
+									placeholder=""
+									required />
+							<div class="has-error" ng-show="formCreaCons.identifiant.$dirty">
+								<span ng-show="formCreaCons.identifiant.$error.required">Champ obligatoire</span>
 							</div>
 						</div>
 					</div>
@@ -131,12 +147,14 @@
 						<label class="col-md-5 control-lable text-right" for="file">Mot de Passe
 							</label>
 						<div class="col-md-7">
-							<input type="text" ng-model="ctrl.cons.motDePasse" name="motDePasse"
-								class="password form-control input-sm" placeholder=""
-								required />
+							<input 	type="password" 
+									ng-model="ctrl.cons.motDePasse" 
+									name="motDePasse"
+									class="password form-control input-sm" 
+									placeholder="mot de passe du conseiller"
+									required />
 							<div class="has-error" ng-show="formInscription.$dirty">
-								<span ng-show="formConnexion.adresse.$error.required">Champ
-									obligatoire</span>
+								<span ng-show="formCreaCons.adresse.$error.required">Champ obligatoire</span>
 							</div>
 						</div>
 					</div>
@@ -146,11 +164,13 @@
 
 
 					<div class="form-actions floatRight">
-						<input type="submit" value="Ajouter"
-							class="btn btn-primary btn-sm"
-							ng-disabled="formConnexion.$invalid">
+						<input 	type="submit" 
+								value="Ajouter"
+								class="btn btn-primary btn-sm"
+								ng-disabled="formCreaCons.$invalid">
 					</div>
 				</div>
 			</form>
 		</div>
 	</div>
+</div>
