--- a/GBriceCorp/src/main/webapp/static/views/Guest_Inscription.html
+++ b/GBriceCorp/src/main/webapp/static/views/Guest_Inscription.html
@@ -71,7 +71,7 @@
 								class="form-control input-sm"
 								placeholder="Entez votre telephone" 
 								required 
-								pattern="^((\d{1,3}(-| )?\(?\d\)?(-| )?\d{1,5})|(\(?\d{2,6}\)?))(-| )?(\d{3,4})(-| )?(\d{4})(( x| ext)\d{1,5}){0,1}$"
+								pattern="[0-9]{10}"
 								type="tel"/>
 							<div class="has-error" ng-show="formInscription.telephone.$dirty">
 								<span ng-show="formInscription.telephone.$error.required">Champ
