Putain de justificatif

--- a/GBriceCorp/src/main/webapp/static/css/app.css
+++ b/GBriceCorp/src/main/webapp/static/css/app.css
@@ -72,7 +72,7 @@ body, .form-control {
 }
 
 .generic-container {
-
+		min-width:450px;
 	margin: auto;
 	padding: 1vw;
 	background-color: #EAE7E7;
